--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Barbershop Dev's</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>BarberShopDevs</title>
 </head>
 <body>
-  
+    <header>
+        <section class="main_logo">
+            <img src="./assets/img/main_logo.PNG" alt="">
+        </section>
+
+        <section class="header_info">
+            <section class="gif_main">
+                <img src="./assets/img/barber-animate.svg   " alt="">
+            </section>
+
+            <section class="header_form">
+                <h1> Bem-vindo à Barber Shop Devs </h1>
+            </section>
+        </section>
+        
+    </header>
+    
 </body>
 </html>
