--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,14 @@
             </section>
 
             <section class="header_form">
-                <h1> Bem-vindo à Barber Shop Devs </h1>
+                <section class="input_ss">
+                    <p>Nome:</p>
+                    <input type="text" placeholder="">
+                    <p> Email:</p>
+                    <input type="text" placeholder="">
+                    <p>Telefone:</p>
+                    <input type="text" placeholder="">
+                </section>
             </section>
         </section>
         
