icons aditions and form complete

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <header>
         <section class="main_logo">
             <img src="./assets/img/main_logo.PNG" alt="">
+            <div class="wpp_logo__">
+                <img src="./assets/img/wpp.png" alt="">
+            </div>
+            <div class="instagram_logo__">
+                <img src="./assets/img/instagram.png" alt="">
+            </div>
+            <div class="loc_logo__">
+                <img src="./assets/img/location.png" alt="">
+            </div>
         </section>
 
         <section class="header_info">
@@ -19,14 +28,19 @@
 
             <section class="header_form">
                 <section class="input_ss">
+                    <h1>Entre em contato</h1>
                     <p>Nome:</p>
                     <input type="text" placeholder="">
                     <p> Email:</p>
                     <input type="text" placeholder="">
                     <p>Telefone:</p>
                     <input type="text" placeholder="">
+
                 </section>
-            </section>
+                <div class="send__">
+                    <img src="./assets/img/send.png" alt="">
+                </div>
+                </section>
         </section>
         
     </header>
