Create a list of services

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
         </section>
         
     </header>
+
+    <div class="container">
+        <h1>Nossos serviços</h1>
+        <ul>
+            <li>corte</li>
+            <li>barba</li>
+            <li>sombrancelha</li>
+        </ul>
+    </div>
     
 </body>
 </html>
