my part was the creation of the footer of the barbershop page

--- a/index.html
+++ b/index.html
@@ -47,3 +47,62 @@
     
 </body>
 </html>
+
+html>
+<head>
+  <title>Exemplo de Rodapé Estilizado</title>
+  <style>
+   
+    footer {
+      background-color: #FA620C;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #fff;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    footer p {
+      margin: 0;
+      line-height: 1.5;
+    }
+
+    footer .address {
+      display: block;
+    }
+
+    footer .phone {
+      display: block;
+      font-size: 12px;
+      margin-top: 10px;
+    }
+
+    footer a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  
+  
+  <!-- Rodapé -->
+
+<!-- Conteúdo da página -->
+
+<!-- Rodapé -->
+<footer>
+  <p class="address">&copy; 2023 BarberShopDevs. Todos os direitos reservados.</p>
+  <p class="address">Endereço: valparaiso 2 de Goias bairro rio branco</p>
+  <p class="phone">Telefone: (61) 8672-4813</p>
+  <p>Desenvolvido por <a>Manoel,Raphael,Matheus e Pedro</a></p>
+</footer>
+</body>
+</html>
